# recognizex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mise.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/recognizex/: config.py  main.py
src/recognizex/api/: middleware.py  routes.py  schemas.py
src/recognizex/ml/: face_detector.py  face_recognizer.py  image_classifier.py  inference.py  model_manager.py  preprocessing.py
tests/: test_api.py  test_model_manager.py
